k8s/gcp/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubetask-frontend
  namespace: kubetask
spec:
  selector:
    app: kubetask
    component: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
